# PaintKiDukaan

./: .debug-journal.md  .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  .plan  AGENTS.md  AUDIT-REPORT.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  HTML-REPORT.html  PRODUCT.md  TODO_BACKEND.md  boneyard.config.json  index.html  minisign.key  minisign.pub  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  security_recheck_poc_engineer_a.json  showcase-375-snapshot.md  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.commitshow/: audit.json
.debug/: journal.md
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml  cross-os-build.yml  release.yml
.impeccable/: design.json
.omc/: project-memory.json
.omc/state/: agent-replay-8d510ace-e4d8-4a70-9bf2-3c79a1c42eb2.jsonl  idle-notif-cooldown.json
.omo/: boulder.json
.omo/drafts/: auto-update.md  db-performance.md
.omo/plans/: auto-update.md  bugfix-hyperplan-critical.md  bulk-barcode-management.md  dashboard-ui-ux-improvement.md  db-performance.md  paint-shop-implementation-plan.md  paint-shop-insight-bundle.md  paint-shop-master-plan.md  paintkiduakan-recovery.md  parallel-worktree-slices.md  refactor.md  sales-page-rewrite.md  security-audit-world-class.md  ui-polish-and-bugfixes.md  updated-master-plan.md
.omo/run-continuation/: ses_0fb992d07ffemq55vszB78kog6.json  ses_0fb993fb1ffe7M7gZvqU77r6Mb.json  ses_0fb99532dffeK61qqu382WYGRQ.json  ses_0fb998030ffepYp5KtulhJh6Od.json  ses_0fb99c0e5ffesduZM6BU74O4Zg.json  ses_0fb9ad919ffeMhpdcCkGVFk4Eu.json  ses_0fb9cbc02ffeK5pgxgg2WFgVO1.json  ses_0fb9cd3eaffe4rmy4Yj0EFS3zg.json  ses_0fb9e21a5ffeflUaxfGB5ewykv.json  ses_0fc189e3dffeRYnY2YlkaCy34X.json  ses_0fc19be73ffe5F8PiolGjqCSX1.json  ses_0fc31bceeffeJR0BtzlFRDpFAz.json  ses_0fc3bb1bcffeeFTt54vHNwxBEd.json  ses_0fc3bd035ffeCT8i8zXrt0AZuB.json  ses_0fc3bf327ffemCQIU7EEFnRzAH.json  ses_0fc3c30d9ffeGyMJvr6SKZMF2X.json  ses_0fc3ee221ffeUPsP4aasHd3eei.json  ses_0fc3ee556ffeWvz1TXrh1JM1ez.json  ses_0fc3eefceffez8EH89ePwPLVNK.json  ses_0fc3ef634ffe352zE0xQqufgkK.json  ses_0fc3f24d6ffej99AMsrD8FAV9Z.json  ses_0fc3f29dcffeva6YGKikqAc0Wl.json  ses_0fc3f4677ffe2jK3C91vDQZOlC.json  ses_0fc3f4c01ffeMJpH6cB8fiwE93.json  ses_0fc3f55ecffexGBgnTHB9y6jDN.json  ses_0fc3f5b98ffeZ1n2lORjDj6ZO6.json  (+398 more)
.playwright-mcp/: page-2026-06-19T12-08-50-578Z.yml  page-2026-06-23T19-20-15-541Z.yml  pkd-deep-audit-v2.md  pkd-deep-audit.md  pkd-page-audit.md
bench/: list-perf.mjs
docs/: RELEASE_NOTES_v0.1.38.md  ReleaseLogPolicy.md  SELF_UPDATE.md  VISUAL_QA_MATRIX.md  WINDOWS_BUILD.md
public/: splash.html
scripts/: check-release-version.cjs  check-sql-schema.cjs  check-sql-schema.sh  check-tauri-cli-native.cjs  cross-build.mjs  dev-setup-minisign.sh  leak-check.sh  pkb-smoke.sh  run-bench.sh  sign-ed25519.py  verify_updater_pubkey.py  windows-sign.ps1
src/: App.quit.test.ts  App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: AGENTS.md  Cargo.toml  build.rs  splash.html  tauri.conf.json  updater.key.pub
src-tauri/benches/: list_items.rs
src-tauri/capabilities/: default.json  splash.json
src-tauri/examples/: dev_verify_update.rs  slice_c_e2e.rs
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/installer/nsis-plugins/: README.md  nsProcess.nsh
src-tauri/migrations/: 20240101000001_m_b1_domain.sql  20240101000003_m_b3_cleanup.sql
src-tauri/src/: backup.rs  cg_scanner.rs  db.rs  error.rs  hardening.rs  hid_scanner.rs  lib.rs  main.rs  scan.rs  session.rs  sys_tool.rs  updater_key.rs
src-tauri/src/backup/: chunked.rs  envelope.rs  kdf.rs  restore.rs  snapshot.rs
src-tauri/src/commands/: _stock_movements.rs  _util.rs  alerts.rs  auth.rs  backup.rs  brands.rs  categories.rs  customer_ledger.rs  customer_types.rs  customers.rs  day_close.rs  discover_printers.rs  drafts.rs  formulas.rs  import.rs  items.rs  label_log.rs  locations.rs  mod.rs  printers.rs  printing.rs  purchases.rs  recovery.rs  reports.rs  sale_purchase_units.rs  sales.rs  sequences.rs  settings.rs  sub_locations.rs  units.rs  updater.rs  vendor_ledger.rs  vendors.rs
src-tauri/src/commands/auth/: commands.rs  keystore.rs  lockout.rs  mod.rs  session.rs  types.rs
src-tauri/src/commands/sales/: edit.rs  fbill.rs  final_sale.rs  helpers.rs  list.rs  mod.rs  quotation.rs  return_sale.rs
src-tauri/src/crypto/: kdf.rs  mod.rs  wrap.rs
src-tauri/src/db/: inline_migrations.rs  keywrap.rs  list.rs  migrations.rs  mod.rs  schema.sql  schema_final.sql  schema_v1.sql  schema_v2.sql  schema_v4.sql
src-tauri/src/db/migrations/: 001__add_missing_tables.sql  002__add_units_dimension_and_brands.sql  003__add_items_brand_unit_sell_unit.sql  004__drop_location_text.sql  005__daily_counters_and_return_payments.sql  006__update_customer_types.sql  007__add_no_to_sale_returns.sql  008__printers.sql  008__reconcile_schema_to_rust.sql  009__reconcile_schema_to_rust.sql
src-tauri/src/db/queries/: items.rs  mod.rs  sales.rs
src-tauri/src/hardening/: prevent_sleep.rs  tray.rs
src-tauri/src/obs/: mod.rs
src-tauri/src/security/: amsi_check.rs  anti_debug.rs  anti_dump.rs  anti_forensic.rs  anti_hook.rs  anti_injection.rs  anti_screenshot.rs  anti_sniff.rs  anti_vm.rs  app_paths.rs  clock_guard.rs  dpapi_keystore.rs  firewall.rs  hostile_env.rs  install_cleanup.rs  ipc_auth.rs  mitigation_policy.rs  mod.rs  ntdll_integrity.rs  pde.rs  pde_seed.rs  pin_entry.rs  priv_strip.rs  raw_input.rs  registry_watch.rs  roles.rs  secrets_compat.rs  secure_delete.rs  secure_desktop.rs  secure_log.rs  self_integrity.rs  string_obfusc.rs  syscall.rs  telemetry_suppress.rs  usb_watch.rs
src-tauri/src/shell/: mod.rs
src-tauri/tests/: cross_os_native_ops.rs  poc_security.rs  rust.rs  sale_return_balance_mode.rs  sale_returns_paged_null_date.rs  sales_list_date_filter.rs
src-tauri/tests/fixtures/: fixture.app.tar.minisig  tauri.conf.json
src-tauri/tests/rust/: common.rs  customer_ledger.rs  day_close.rs  items.rs  purchases.rs  sales.rs  settings.rs  stock_movements.rs  vendor_ledger.rs
tests/: AGENTS.md
xtask/: Cargo.toml
(+349 files in other folders)
