[package]
name = "paintkiduakan-master"
version = "0.1.0"
description = "PaintKiDukaan Master — paint shop inventory + billing system"
authors = ["PaintKiDukaan"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "paintkiduakan_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "paintkiduakan-master"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-oauth = "2"
tauri-plugin-keyring-store = "0.2"

# Database (SQLCipher)
rusqlite = { version = "0.40", features = ["sqlcipher", "bundled-sqlcipher", "backup"] }
rusqlite_migration = "2.6"

# Crypto
argon2 = { version = "0.5", features = ["zeroize"] }
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
password-hash = "0.5"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "fs"] }
tokio-cron-scheduler = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Concurrency primitives
parking_lot = "0.12"

# Scanner wedge (desktop global keyboard hook)
rdev = "0.5"

# System paths (config / data dirs)
dirs = "5"
fs2 = "0.4"

# Temp paths used at runtime by backup test_restore and snapshot flows
tempfile = "3"

[dev-dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
test-harness = []
