[package]
name = "paintkiduakan-master"
version = "0.1.0"
description = "PaintKiDukaan Master — paint shop inventory + billing system"
authors = ["PaintKiDukaan"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "paintkiduakan_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "paintkiduakan-master"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
# tauri-plugin-global-shortcut — removed (unused, CWE-1104)
# tauri-plugin-oauth — removed (unused, CWE-1104)
# tauri-plugin-keyring-store — removed (unused, CWE-1104)

# Database (SQLCipher)
rusqlite = { version = "0.40", features = ["sqlcipher", "bundled-sqlcipher", "backup"] }
rusqlite_migration = "2.6"

# Crypto
argon2 = { version = "0.5", features = ["zeroize"] }
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
password-hash = "0.5"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
# Constant-time comparison (CWE-208 fix)
subtle = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "fs"] }
tokio-cron-scheduler = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Concurrency primitives
parking_lot = "0.12"

# Scanner wedge (desktop global keyboard hook)
rdev = "0.5"

# System paths (config / data dirs)
dirs = "5"
fs2 = "0.4"

# Anti-forensic (Track A — secure delete needs rand + libc)
rand = "0.8"
libc = "0.2"

# Temp paths used at runtime by backup test_restore and snapshot flows
tempfile = "3"

# Security: path canonicalization (Windows UTF-8 safe)
dunce = "1"

# Security: Windows APIs (registry, firewall COM, system)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Com",
] }

[dev-dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
test-harness = []

# Integration tests (sales_integration, parties_integration, inventory_integration)
# were archived to docs/schema-archive/integration_tests_legacy/ after the schema
# reset. They referenced the v1..v14 column names and won't compile against the
# new schema. They will be rewritten in the L3 phase and re-added here.
