[package]
name = "paintkiduakan-master"
version = "0.1.20"
description = "PaintKiDukaan Master — paint shop inventory + billing system"
authors = ["PaintKiDukaan"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "paintkiduakan_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "paintkiduakan-master"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
# tauri-plugin-global-shortcut — removed (unused, CWE-1104)
# tauri-plugin-oauth — removed (unused, CWE-1104)
# tauri-plugin-keyring-store — removed (unused, CWE-1104)

# Database (SQLCipher)
# bundled-sqlcipher-vendored-openssl compiles both SQLCipher and OpenSSL from source —
# no OPENSSL_DIR or system OpenSSL needed on any platform. First build on a new machine
# is slow (~5-10 min while OpenSSL compiles); subsequent builds use the Cargo cache and
# are fast. libsqlite3-sys 0.38.x build.rs hard-panics on Windows with bundled-sqlcipher
# alone unless this feature is active (it gates DEP_OPENSSL_INCLUDE vs OPENSSL_DIR).
rusqlite = { version = "0.40", features = ["sqlcipher", "bundled-sqlcipher-vendored-openssl", "backup"] }
rusqlite_migration = "2.6"

# Crypto
argon2 = { version = "0.5", features = ["zeroize"] }
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
password-hash = "0.5"
rand_core = "0.6"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
# Constant-time comparison (CWE-208 fix)
subtle = "2"
# HMAC-SHA256 for backup envelope integrity (R-11)
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "fs"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
uuid = { version = "1", features = ["v4"] }

# Concurrency primitives
parking_lot = "0.12"

# Scanner wedge (desktop global keyboard hook)
rdev = "0.5.3"

# USB HID scanner support (M4.2)
hidapi = { version = "2.6", features = ["windows-native"] }

# System paths (config / data dirs)
dirs = "5"
fs2 = "0.4"

# Cross-platform OS keystore (macOS Keychain, Linux secret-service, Windows cred)
keyring = "3"

# Anti-forensic (Track A — secure delete needs rand + libc)
rand = "0.8"
getrandom = "0.2"

# Native file picker dialog (backup restore wizard)
rfd = "0.17"

# Temp paths used at runtime by backup test_restore and snapshot flows
tempfile = "3"

# Security: path canonicalization (Windows UTF-8 safe)
dunce = "1"

# Security: Windows APIs (registry, firewall COM, system, power)
[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Com",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
] }

# macOS CGEventTap for barcode scanner hook (M4.1)
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
test-harness = []

# Integration tests (sales_integration, parties_integration, inventory_integration)
# were archived to docs/schema-archive/integration_tests_legacy/ after the schema
# reset. They referenced the v1..v14 column names and won't compile against the
# new schema. They will be rewritten in the L3 phase and re-added here.

# Release hardening: strip symbols and file paths from the production binary,
# enable fat LTO + opt-level 3, and use panic = "unwind" so Tauri's panic hook
# (lib.rs run() setup) can still log + invoke the default hook before unwinding.
# panic = "abort" was avoided because it bypasses destructors, breaking the
# zeroize::Drop chains in crypto/keystore paths.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false
